-- Almost all changes listed herein are new as of 2016. --

2016-07-22  Bob Weiner  <rsw@gnu.org>

* man/hyperbole.texi (Implicit Buttons):
  hib-social.el (social-reference): Improved doc for this ibtype.

* man/hyperbole.texi (Implicit Buttons, Explicit Buttons): Improved clarity.
                     (Global Buttons): Explained how to use global buttons.

* Makefile (release): Added this target to generate the kotl/kotl-autoloads.el file
    within the source tree.

* hmoccur.el: Normalized header to match other Hyperbole files.

* hyperbole.el (hyperbole-koutliner group): Moved definition to ensure comes after
    hversion is loaded.

* Makefile (pkg): Updated to build kotl/kotl-autoloads.el file because the Emacs
    Lisp Package Manager (ELPA) does not yet handle generation of autoloads
    for package subdirectories.

2016-07-21  Bob Weiner  <rsw@gnu.org>

* hsettings.el: Renamed this from hsite.el to prevent Hyperbole V4 users from
    accidentally loading it manually.

* hyperbole.el (hyperbole-autoloads): If this exists and autoloads kotl-mode,
    then skip setup to generate hyperbole-autoloads with autoloads from the kotl/
    subdirectory.

* hib-social.el (social-reference): 
  hibtypes.el (mail-address-at-p): Let case-fold-search be t since mail-addresses
    are case-insensitive.

* Various Files: Small copyright fixes and formatting adjustments.
    Replaced hyperb:xemacs-p with (featurep 'xemacs) for byte-compiler
    optimization purposes and made small fixes throughout suggested by Stefan
    Monnier.

* hibtypes.el (mail-address-regexp): Simplified and modernized address matching
    to better distinguish from @username social media references.
              (mail-address-mode-list): Added lisp-interaction-mode and fundamental-mode.
              (mail-address-tld-regexp): Added to match most common top-level
    domains to tell if a match is really an email address or not.