@@ -193,7 +193,7 @@ Entry format is: (key-description key-sequence key-binding)."
 	  (hkey-bindings-keys hkey-previous-bindings)))
 
 (defun hkey-global-set-key (key command &optional no-add)
-  (or no-add (add-to-list 'hkey-previous-bindings (hkey-binding-entry key)))
+  (or no-add (add-to-list #'hkey-previous-bindings (hkey-binding-entry key)))
   (global-set-key key command))
 
 (defun hkey-initialize ()
@@ -338,7 +338,7 @@ bindings after load)."
   #'(if (boundp 'hyperb:dir)
 	(let ((info-dir (expand-file-name "man/" hyperb:dir)))
 	  (if (file-exists-p info-dir)
-	      (add-to-list 'Info-directory-list info-dir)))))
+	      (add-to-list #'Info-directory-list info-dir)))))
 
 ;;; ************************************************************************
 ;;; Prevent local key maps from hiding the Action Key (overriding it)
